Fixed Attendance Top Nav Overlap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -294,6 +294,7 @@ footer {
     background-color: #333;
     overflow: hidden;
     position: fixed; /* Set the navbar to fixed position */
+    z-index: 2; /* Set the z-index of the navbar to 2, Fixes Overlap */
     top: 0; /* Position the navbar at the top of the page */
     left: 0;
     width: 100%; /* Full width */
